WFLY-17372 Eliminate static references to Undertow ResourceDefinition instances